kubernetes/jenkins-pvc.yml
---
apiVersion: v1
kind: Namespace
metadata:
   name: services
