kubernetes/jenkins.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: services
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 4g
    nginx.ingress.kubernetes.io/server-snippet: |
      access_log /var/log/nginx/jenkins.access.log;
      error_log /var/log/nginx/jenkins.error.log;
      gzip on;
      gzip_disable "msie6";
      gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
spec:
  rules:
  - host: jenkins.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
